2005-03-07  Roger While <simrw@sim-basis.de>

	* default.conf, mvs.conf :
	  New variable - not-reserved
	  Document in default.conf
	  CYCLE as not reserved in mvs.conf 

2003-08-30  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* gnu.conf: Removed.
	* default.conf: Renamed from default.inc.

2003-08-28  Keisuke Nishida  <kxn30@yahoo.co.jp>

	* v023.conf: New file.

2003-08-09  Keisuke Nishida  <knishida@netlab.jp>

	* gnu.conf, cobol85.conf, cobol2002.conf, mf.conf, mvs.conf: New files.
	* default.inc, Makefile.am: New files.