@@ -20,4 +20,3 @@ padding-character-clause:	obsolete
 next-sentence-phrase:		archaic
 entry-statement:		unconformable
 
-larger-redefines-ok: yes
